# travel-guide

./: .env-example  LICENSE  README.md  pyproject.toml  requirements.txt
src/: main.py  openaiclient.py
src/travelguide/: cli.py  openaiclient.py
